Modernize codebase for Java 17 features
- Replace collect(Collectors.toList()) with .toList() (Java 16+)
- Update instanceof with pattern matching (Java 16+)
- Remove unused Collectors imports where possible
- Simplify stream collection operations throughout codebase

Files updated:
- UseProducts.java, UsePerson.java, SortStrings.java
- BoxedStreams.java, Ordering.java, SumSqrtPrimes.java
- Person.java (pattern matching instanceof)

Benefits: Cleaner code, fewer imports, modern Java idioms

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>