@@ -4,7 +4,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class SortStrings {
     public static void main(String[] args) {
@@ -33,26 +32,26 @@ public class SortStrings {
         System.out.println("Natural sort using Stream.sorted()");
         List<String> sorted = strings.stream()
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
         System.out.println(sorted);
 
         System.out.println("Reverse length sort using Stream.sorted(Comparator)");
         sorted = strings.stream()
                 .sorted((s1, s2) -> s2.length() - s1.length())
-                .collect(Collectors.toList());
+                .toList();
         System.out.println(sorted);
 
         System.out.println("Sort by length using Comparator.comparingInt()");
         sorted = strings.stream()
                 .sorted(Comparator.comparingInt(String::length))
-                .collect(Collectors.toList());
+                .toList();
         System.out.println(sorted);
 
         System.out.println("Sort by length, then equal lengths reverse alpha");
         sorted = strings.stream()
                 .sorted(Comparator.comparingInt(String::length)
                         .thenComparing(Comparator.reverseOrder()))
-                .collect(Collectors.toList());
+                .toList();
         System.out.println(sorted);
     }
 }
